@@ -1,3 +1,9 @@
+2006-09-16 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: some small changes to make the GUI more
+	  consistent (#353140)
+
 2006-09-14 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* configure.in: changed libpartedcheck a bit. from now on we declare
